revert unwanted renames

--- a/spec/spec/spec.v1.yaml
+++ b/spec/spec/spec.v1.yaml
@@ -668,7 +668,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -713,7 +713,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -771,7 +771,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -814,7 +814,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -865,7 +865,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -920,7 +920,7 @@ paths:
         - Integrating branch data into other systems for enhanced content lifecycle management.
 
         **Key Parameters**:
-        - `templateId`: Identifies the template to which the branch belongs.
+        - `promptId`: Identifies the template to which the branch belongs.
         - `branchName`: Specifies the name of the branch to retrieve.
 
       operationId: getBranch
@@ -933,7 +933,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -980,7 +980,7 @@ paths:
         - Automated systems enforcing branch retention policies by deleting branches past their retention period.
 
         **Key Parameters**:
-        - `templateId`: Identifies the template whose branch is being deleted.
+        - `promptId`: Identifies the template whose branch is being deleted.
         - `branchName`: Specifies the name of the branch to delete.
 
       operationId: deleteBranch
@@ -993,7 +993,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -1047,7 +1047,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -1106,7 +1106,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -1177,7 +1177,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -1236,7 +1236,7 @@ paths:
       tags:
         - Commits
       parameters:
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -1280,17 +1280,6 @@ paths:
       summary: List all test cases for the given template
       description: |
         Retrieves a list of all test cases associated with a template.
-
-        **Features**:
-        - **Commit Tracking**: Provides detailed information about each commit, including commit messages, authors, and timestamps, which helps in tracking the changes made over time.
-        - **Historical Analysis**: Facilitates the analysis of how a branch has evolved, enabling users to see the progression of content and identify key milestones.
-        - **Auditing and Compliance**: Maintains a clear record of all changes made to a branch, supporting auditing and compliance requirements.
-
-        **Use Cases**:
-        - Developers reviewing commit histories to understand the development process of a branch.
-        - Content managers analyzing changes for quality control and consistency.
-        - Compliance officers auditing changes for regulatory adherence.
-
       operationId: listTestCases
       tags:
         - Test Cases
@@ -1301,12 +1290,12 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
             type: string
-          description: The unique identifier of the template whose branch commits are being listed.
+          description: The unique identifier of the template.
       responses:
         '200':
           description: Successfully retrieved a list of all test cases associated with the given template.
@@ -1354,7 +1343,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -1419,7 +1408,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -1478,7 +1467,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
@@ -1548,7 +1537,7 @@ paths:
           schema:
             type: string
           description: The unique identifier of the project.
-        - name: templateId
+        - name: promptId
           in: path
           required: true
           schema:
